# cookiecutter-python-cli

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .bumpversion.cfg  .envrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  noxfile.py  pyproject.toml  shell.nix
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_name}}.py
